[package]
name = "siplir"
version = "0.0.4"
edition = "2024"

[dependencies]

[profile.release]
lto = true
codegen-units = 1
#panic = "abort"
opt-level = 3
incremental = true
strip = "symbols"
debug = true

[profile.dev]
lto = "thin"
codegen-units = 1
opt-level = 1
debug = true
strip = false
incremental = true
